Simple test of package installation in Docker container

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -26,7 +26,8 @@ RUN R_VERSION=4.1.2 && ln -s /opt/R/${R_VERSION}/bin/R /usr/local/bin/R && ln -s
 RUN R --version
 
 # Get our code
-RUN echo "" && git clone https://github.com/ekernf01/knockoffs_shareseq.git
+RUN echo ""
+RUN git clone https://github.com/ekernf01/knockoffs_shareseq.git
 
 # Install the R packages we need. This fails and then works due to a "versions" quirk.
 RUN R --no-save knockoffs_shareseq/scripts/install.R || R --no-save  knockoffs_shareseq/scripts/install.R 
