Simple test of package installation in Docker container

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -30,7 +30,7 @@ RUN echo ""
 RUN git clone https://github.com/ekernf01/knockoffs_shareseq.git
 
 # Install the R packages we need. This fails and then works due to a "versions" quirk.
-RUN R --no-save knockoffs_shareseq/scripts/install.R || R --no-save  knockoffs_shareseq/scripts/install.R 
+RUN Rscript knockoffs_shareseq/scripts/install.R || Rscript  knockoffs_shareseq/scripts/install.R 
 
 
 # # Reminder to myself of the boilerplate to rebuild this
