Simple test of package installation in Docker container

--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -27,6 +27,7 @@ RUN R --version
 
 # Get our code
 RUN echo ""
+RUN echo ""
 RUN git clone https://github.com/ekernf01/knockoffs_shareseq.git
 
 # Install the R packages we need. This fails and then works due to a "versions" quirk.
