--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -26,8 +26,7 @@ RUN R_VERSION=4.1.2 && ln -s /opt/R/${R_VERSION}/bin/R /usr/local/bin/R && ln -s
 RUN R --version
 
 # Get our code
-RUN echo ""
-RUN echo ""
+RUN echo "1"
 RUN git clone https://github.com/ekernf01/knockoffs_shareseq.git
 
 # Install the R packages we need. This fails and then works due to a "versions" quirk.
